--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,6 @@
 {
   "require": {
-    "vlucas/phpdotenv": "^v5.5.0"
-  },
-  "autoload": {
-    "psr-4": {
-      "Src\\": "src/",
-      "Models\\": "models/",
-      "Config\\": "config/"
-    }
+    "vlucas/phpdotenv": "^v5.5.0",
+    "ext-pdo": "*"
   }
 }
