--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,10 @@
   "require": {
     "vlucas/phpdotenv": "^v5.5.0",
     "ext-pdo": "*"
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "src/"
+    }
   }
 }
